app/assets/stylesheets/application.scss
/*
 * This is a manifest file that will be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 */

//Do not use '*=require's, can mess up bootstrap
//bootstrap-sprockes must be imported before bootstrap
@import "bootstrap-sprockets";
@import "bootstrap";

@import "http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css";

@import 'home';
@import 'sermons';
@import 'articles';
@import 'newsletter';
@import 'contact';
@import 'mixins';

.full-bg {
  @include full-image-bg("sky2.jpg");
}

body {
  background: inherit;
}

.container {
  min-width: 480px;
}

.section {
  margin-bottom: 25px;
  padding: 5px;
  padding-left: 20px;
  padding-right: 20px;
  border-radius: 3px;

  opacity: 0.98;
  background-color: #111111;
  color: #EEEEEE;

  h1 {
    margin-left: -30px;
    margin-top: -15px;

    @include width-max-content;
    max-width: 100%;

    padding: 5px;

    color: #000000;
    background-color: #EEEEEE;

    border-right: 2px solid #AAAAAA;
    border-bottom: 2px solid #AAAAAA;
    border-radius: 5px;
  }

  p {
    padding-top: 5px;
    padding-bottom: 5px;
  }

  img {
    padding: 5px;
  }
  
  form {
    .form-control {
      color: #000000;
    }

    .date-select {
      width: 32%;
      float: left;
      margin-right: 8px;
    }
  }
}

h2 {
  font-variant: small-caps;
  font-weight: bold;
  font-size: 2em;
}

.centered-with-lines {
  display: flex;
  align-items: center;
  text-align: center;
  justify-content: center;

  &:before, &:after {
    content: '';
    flex-grow: 1;
    height: 1px;
    background: #EEEEEE;
    min-width: 25px;

    display: inline-block;
    vertical-align: middle;
  }

  &:before {
    margin-right: 20px;
  }

  &:after {
    margin-left: 20px;
  }
}

.icon {
  width: 24px;
  height: 24px;
  @include filter(saturate(10%) invert(100%));

  &:hover {
    @include filter(saturate(100%));
    @include filter(drop-shadow(2px 1px 1px rgba(2,2,2,0.7)));
  }
}

.alert {
  border: 1px solid black;
}

.nav-pills {
  li {
    text-align: center;
    
    a {
      background: #333333;
      color: #EEEEEE;
      margin: 5px;

      &:hover, &:focus {
        color: #111111;
      }
    }
  }
}

.sidebar-links {
  list-style: none;
  padding: 0;

  li {
    text-align: center;
    margin: 10px 5px;
    
    a {
      @extend .interactive-element;
      display: block;
      font-size: 14px;
      padding: 10px;

      border-radius: 4px;
    }
  }
}

.interactive-element {
  text-decoration: none;
  
  background: #333333;
  color: #EEEEEE;

  &:hover {
    background: #555555;  
    color: #FFFFFF;
    transition: 0.5s;
  }
}

footer {
  color: #EEEEEE;
}

